--- a/PortalMedic/pacientes/templates/pacientes/ver_historia.html
+++ b/PortalMedic/pacientes/templates/pacientes/ver_historia.html
@@ -12,12 +12,16 @@
         <div class="col-12">
             <h1 class="display-4 text-center">Historias Clínicas de {{ paciente.nombre }} {{ paciente.apellido }}</h1>
             <ul class="list-group mt-4">
-                {% for historia in historias %}
+                {% if historias %}
+                    {% for historia in historias %}
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                         <span>{{ historia.contenido }}</span>
                         <span class="badge bg-primary rounded-pill">{{ historia.fecha_creacion }}</span>
                     </li>
                 {% endfor %}
+                {% else %}
+                <h2 class="p-3 border rounded text-center">Paciente aun NO posee Historia Clínica</h2>
+                {% endif %}
             </ul>
             <div class="mt-4 d-flex justify-content-between">
                 <a href="{% url 'pacientes:guardar_historia' paciente.id %}" class="btn btn-success">Agregar nueva historia clínica</a>
