--- a/PortalMedic/pacientes/templates/pacientes/modificar_hc.html
+++ b/PortalMedic/pacientes/templates/pacientes/modificar_hc.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    PortalMedic - Historia Clínica
+    PortalMedic - Modificar Historia Clínica
 {% endblock title %}
 
 {% block content %}
@@ -10,11 +10,8 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
-            <h1 class="display-4 text-center mb-4">Guardar Historia Clínica <br> "{{ paciente.nombre }} {{ paciente.apellido }}"</h1>
-            <h5>Datos Personales:</h5>
-            <ul><li><p>Fecha de DNI: {{paciente.DNI}}</li></ul>
-            <ul><li><p>Fecha de Nacimiento: {{paciente.fecha_nacimiento}}</p></li></ul>            
-            <form method="post" class="card p-5 shadow-sm">
+            <h1 class="display-4 text-center mb-4">Modificar Historia Clínica {{ paciente.nombre }} {{ paciente.apellido }}</h1>
+            <form method="post" class="card p-4 shadow-sm">
                 {% csrf_token %}
                 {{ form.as_p }}
                 <div class="d-grid">
@@ -22,7 +19,7 @@
                 </div>
             </form>
             <div class="mt-3 text-center">
-                <a href="{% url 'pacientes:ver_historia' paciente.id %}" class="btn btn-link">Ver historias clínicas</a>
+                <a href="{% url 'pacientes:ver_historia' paciente.pk %}" class="btn btn-link">Ver historias clínicas</a>
             </div>
         </div>
     </div>
