--- a/PortalMedic/pacientes/templates/pacientes/ver_historia.html
+++ b/PortalMedic/pacientes/templates/pacientes/ver_historia.html
@@ -16,15 +16,18 @@
                     {% for historia in historias %}
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                         <span>{{ historia.contenido }}</span>
-                        <span class="badge bg-primary rounded-pill">{{ historia.fecha_creacion }}</span>
-                    </li>
+                        <div class="justify-content-between">
+                            <span class="badge bg-primary rounded-pill">{{ historia.fecha_creacion }}</span>
+                            <button><a href="{% url 'pacientes:modificar_hc' pk=paciente.id %}">Modificar Historia Clínica</a></button>
+                        </div>
+                        </li>
                 {% endfor %}
                 {% else %}
                 <h2 class="p-3 border rounded text-center">Paciente aun NO posee Historia Clínica</h2>
                 {% endif %}
             </ul>
             <div class="mt-4 d-flex justify-content-between">
-                <a href="{% url 'pacientes:guardar_historia' paciente.id %}" class="btn btn-success">Agregar nueva historia clínica</a>
+                <a href="{% url 'pacientes:guardar_historia' paciente.id %}" class="btn btn-success">Añadir historia clínica</a>
                 <a href="{% url 'pacientes:pacientes_list' %}" class="btn btn-secondary">Regresar a Pacientes</a>
             </div>
         </div>
