--- a/PortalMedic/pacientes/templates/pacientes/pacientes_list.html
+++ b/PortalMedic/pacientes/templates/pacientes/pacientes_list.html
@@ -19,7 +19,9 @@ PortalMedic > Consultar Pacientes
         <a href="{% url 'pacientes:pacientes_create'%}" class="btn btn-primary">Ingresar Nuevo Paciente</a>
     </div>
 
-    {% for paciente in pacientes %}    
+    {% if pacientes %}
+
+    {% for paciente in pacientes %}
     <div class="card mb-3">
         <div class="card-body d-flex justify-content-between align-items-center">
             <div>
@@ -32,13 +34,17 @@ PortalMedic > Consultar Pacientes
                 <form method="post" action="{% url 'pacientes:pacientes_confirm_delete' pk=paciente.id%}">
                     {% csrf_token %}
                     <button type="submit" class="btn btn-danger">Eliminar</button>
-                <a href="{% url 'pacientes:pacientes_update' pk=paciente.id%}" class="btn btn-primary">Modificar</a>
-                <a href="{% url 'pacientes:ver_historia' pk=paciente.id %}" class="btn btn-primary">Ver Historia Clínica</a>
+                    <a href="{% url 'pacientes:pacientes_update' pk=paciente.id%}" class="btn btn-primary">Modificar</a>
+                    <a href="{% url 'pacientes:ver_historia' pk=paciente.id %}" class="btn btn-primary">Ver Historia
+                        Clínica</a>
                 </form>
             </div>
         </div>
     </div>
     {% endfor %}
+    {% else %}
+    <h1 class="text-center">NO SE ENCONTRARON RESULTADOS</h1>
+    {% endif %}
     <a href="{% url 'medicos:medicos_list' %}" class="btn btn-primary">Volver a Prestadores</a>
 </div>
 
